# SysOpy

./: .gitignore  CMakeLists.txt  README.md  block_array.c  block_array.h  main.c
Ex1/: config.h  main.c
Ex1/Part1/: CMakeLists.txt  Makefile  block_array.c  block_array.h
Ex1/Part2/: CMakeLists.txt  Makefile  args.c  block_array.c  block_array.h  config.h  main.c
Ex1/Part3/: Makefile  args.c  args.h  block_array.c  block_array.h  config.h  main.c
Ex10/Part1/: Makefile  client.c  common.h  server.c
Ex10/Part2/: Makefile  client.c  common.h  server.c
Ex2/Part1/: Makefile  files.c  files.h  main.c
Ex2/Part2/: main.c
Ex3/Part1/: Makefile  main.c
Ex3/Part2/: Makefile  main.c
Ex3/Part3/: Makefile  main.c  memory_overload.c
Ex4/Part1/: Makefile  main.c  main_subprocess.c
Ex4/Part2/: Makefile  main.c
Ex4/Part3/: Makefile
Ex5/Part1/: Makefile  main.c
Ex5/Part2/: Makefile  master.c  slave.c
Ex6/Part1/: Makefile  client.c  qio.c  qio.h  server.c
Ex6/Part2/: Makefile  client.c  qio.c  qio.h  server.c
Ex7/Part1/: Makefile  barber.c  client.c  defines.h  queue.c  queue.h  sem.c  sem.h  shm.c  shm.h
Ex7/Part2/: Makefile  barber  barber.c  client  client.c  defines.h  queue.h
Ex8/: Makefile  apgm.c  apgm.h  coins-sobel.pgm  filter.c  filter.h  imgfilter.c  out-sobel.pgm  roi_14-sobel.pgm  sobel.filter  x31_f18-sobel.pgm
Ex9/Part1/: Makefile  cfg.txt  main.c
Ex9/Part2/: main.c
